@@ -29,7 +29,7 @@
 /**
  * @class transaction
  *
- * @brief Used to manage the details of a particular transaction betwen
+ * @brief Used to manage the details of a particular transaction between
  * two SNMP agents. Uses SnmpTarget class to implement retry/timeout
  */
 class ASNMP_Export transaction : public ACE_Event_Handler
