@@ -1,3 +1,10 @@
+Fri Sep  9 09:39:47 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * README:
+        * asnmp/transaction.h:
+        * asnmp/wpdu.cpp:
+          Layout/doxygen changes
+
 Wed Sep  7 09:13:29 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * README:
